Bug 153754 - "Insert" - "Chart" in Writer hangs
Summary: "Insert" - "Chart" in Writer hangs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2023-02-20 08:44 UTC by Gerald Pfeifer
Modified: 2023-02-20 21:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-02-20 08:44:27 UTC
How to reproduce:

 1. Open Writer
 2. Create new document
 3. "Insert" - "Chart"

Observe how LibreOffice hangs until you kill it.

This is a recent regression. GOOD:

  Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: db6fbb0317fcb0a7babca9f71adbbb7c126b9e4e
  CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

which is the build from 2023-02-14.

BAD:

  Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 296c42cdb8e9dee5ac912d9777afdf3bab63efb9
  CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

which is the build from 2023-02-18.
Comment 1 Gerald Pfeifer 2023-02-20 08:47:04 UTC
Note that the same still works in Impress.
Comment 2 Julien Nabet 2023-02-20 09:30:06 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Noel: reverting 2442fc19400e0e82b0375d3772a2e0b34a511600 (osl::Mutex->std::mutex in SwAccessibleMap) seems to fix this.
Could you please take a look?
Comment 3 Commit Notification 2023-02-20 12:28:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1131cdab3eb21a14822409c05697a91b4beda3e

tdf#153754 "Insert" - "Chart" in Writer hangs

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2023-02-20 21:05:55 UTC
Following Noel's commit, I confirm I don't reproduce this anymore.
Thank you Noel! :-)