tdf#153754 "Insert" - "Chart" in Writer hangs

Revert "osl::Mutex->std::mutex in SwAccessibleMap"
  This reverts commit 2442fc19400e0e82b0375d3772a2e0b34a511600.

We have a recursive call stack that does not look easy to fix

 #7  0x00007fffc2214c18 in std::unique_lock<std::mutex>::unique_lock(std::mutex&) (this=0x7fffffff1c28, __m=...)
    at /usr/lib/gcc/x86_64-linux-gnu/12/../../../../include/c++/12/bits/unique_lock.h:69
 #8  0x00007fffc22b6c06 in SwAccessibleMap::AppendEvent(SwAccessibleEvent_Impl const&) (this=0x55555b7e3aa0, rEvent=...) at sw/source/core/access/accmap.cxx:980
 #9  0x00007fffc22b7f8c in SwAccessibleMap::InvalidateCursorPosition(com::sun::star::uno::Reference<com::sun::star::accessibility::XAccessible> const&)
    (this=0x55555b7e3aa0, rAcc=uno::Reference to (SwAccessibleParagraph *) 0x55555b7cff00) at sw/source/core/access/accmap.cxx:1117
 #10 0x00007fffc22bd595 in SwAccessibleMap::GetContext(SwFrame const*, bool) (this=0x55555b7e3aa0, pFrame=0x55555b6e68a0, bCreate=true)
    at sw/source/core/access/accmap.cxx:1924
 #11 0x00007fffc22bd83f in SwAccessibleMap::GetContextImpl(SwFrame const*, bool) (this=0x55555b7e3aa0, pFrame=0x55555b6e68a0, bCreate=true)
    at sw/source/core/access/accmap.cxx:1935
 #12 0x00007fffc228c8e8 in SwAccessibleContext::InvalidateChildPosOrSize(sw::access::SwAccessibleChild const&, SwRect const&)
    (this=0x55555b7e0630, rChildFrameOrObj=..., rOldFrame=SwRect = {...}) at sw/source/core/access/acccontext.cxx:1227
 #13 0x00007fffc22b5540 in SwAccessibleMap::FireEvent(SwAccessibleEvent_Impl const&) (this=0x55555b7e3aa0, rEvent=...) at sw/source/core/access/accmap.cxx:936
 #14 0x00007fffc22b8216 in SwAccessibleMap::FireEvents() (this=0x55555b7e3aa0) at sw/source/core/access/accmap.cxx:3019

Change-Id: If058cecf7bc7503d0767526c07c0ca2840b3638a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147314
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>